# infrastructure

./: .ansible-lint  .envrc  .gitattributes  .gitconfig  .gitignore  .gitlab-ci.yml  .gitleaksignore  .pre-commit-config-maintainer.yaml  .pre-commit-config.yaml  .vault_pass.gpg  Makefile  Makefile.maintainer  README.adoc  ansible.cfg  backport-mr.sh  bootstrap.sh  catalog-info.yaml  compose-update-public.py  infrastructure.yml  pyproject.toml
ansible/: hosts.yml  requirements.yaml  requirements.yml
ansible/files/: citool-container.sh  citool-container.sh.j2  podman-bridge-reaper.service  podman-bridge-reaper.sh  podman-bridge-reaper.timer
ansible/group_vars/: testing_farm_public_workers.yml  testing_farm_redhat_workers.yml
ansible/inventory/: aws_ec2.yml  fedora_aws_ec2.yaml  fedora_aws_ec2.yml  hosts.yml  redhat_aws_ec2.yaml  redhat_aws_ec2.yml
ansible/playbooks/: create-public-worker.yaml  create-public-worker.yml  create-redhat-worker.yaml  create-redhat-worker.yml  deploy-api-settings.yaml  testing-farm.yaml  testing-farm.yml
ansible/secrets/: credentials.yaml  credentials.yml
ansible/tasks/: artifacts.yaml  artifacts.yml  config.yaml  config.yml  dns.yaml  dns.yml  hostname.yaml  image.yaml  image.yml  jobs-register.yaml  jobs-register.yml  jobs.yaml  jobs.yml  podman.yaml  podman.yml  profiles.yaml  rh-certs.yaml  rh-certs.yml  secrets.yaml  security-group.yml  ssh-key.yaml  ssh-key.yml  swapfile.yaml  terragrunt.yaml  xunit-converter.yml  xunit-viewer.yml
ansible/templates/: job-nomad.j2  job-script.j2
ansible/vars/: common.yaml
configmaps/: deploy-config.sh
configmaps/artemis/: ARTEMIS_HOOK_AWS_ENVIRONMENT_TO_IMAGE.py  ARTEMIS_HOOK_OPENSTACK_ENVIRONMENT_TO_IMAGE.py  ARTEMIS_HOOK_ROUTE.py  artemis-image-map-aws.yaml  server.yml
container/: Containerfile  entrypoint.sh
container/ranch-redhat/: Containerfile
go/dbtool/: dbtool.go  go.mod  go.sum  requests
host_vars/: cluster-testing-farm.yml
images/bootc/: Containerfile  compose-update.sh  container.sh  goss.yaml
inventory/: fedora_aws_ec2.yml  hosts.yaml
k8s/: api.yaml  dispatcher.yaml  loadbalancer.yaml  postgres.yaml  rabbitmq.yaml  scheduler.yaml  worker.yaml
k8s/artemis/: api.yaml.j2  dispatcher.yaml.j2  loadbalancer.yaml  postgres.yaml.j2  redis.yaml  scheduler.yaml.j2  worker.yaml.j2
plans/: integration.fmf
plans/guest-setup/: main.fmf
secrets/: credentials.yaml  credentials.yml  testing-farm.ovpn
setup/: check_json_secrets.sh  cleanup_route53_records.sh  compose_update_public.py  environment.sh  generate_compose_tests.py  generate_environment.py  generate_pools.py  generate_redhat_compose_tests.py  github.py  gitlab.py  renew_certs.sh  request_shell.sh  terminate_artemis_guests.sh  terminate_artemis_guests_dev.sh  terminate_ebs_volumes.sh  terminate_eks_ci_clusters.sh  terminate_eks_ci_namespaces.sh  terminate_leftover_aws_instances_after_gitlab_ci.sh  terminate_security_groups.sh  terminate_unused_loadbalancers.sh  terraform_cloud.py  wait_artemis_available.sh  wait_artemis_available_dev.sh
tasks/: create_eks_cluster.yml
templates/: job-script.j2
terraform/: main.tf  outputs.tf  variables.tf  variables_images.yml
tests/: common.yaml  main.fmf
tests/guest-setup/: centos-stream-9.fmf  fedora-35.fmf
tests/testing-farm/: pytest-gluetool-redhat.fmf  (+1 more)
(+900 files in other folders)
