[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = "Testing Farm Infrastructure."
authors = ["Miroslav Vadkerti <<mvadkert@redhat.com>>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "~3.9"
awscli = "1.25.21"
ansible-core = "~2.14.6"
ansible-lint = "^4.0.0"
ansible-vault = "^1.2.0"
jinja2 = "^3.0.0"
cryptography = "^2.9.2"
yq = "^2.10.0"
boto3 = "1.24.21"
tft-cli = "^0.0.10"
markupsafe = "*"

[tool.poetry.dev-dependencies]
yamllint = "^1.29.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
