[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = "Testing Farm Infrastructure."
authors = ["Miroslav Vadkerti <<mvadkert@redhat.com>>"]
license = "Apache-2.0"
packages = [
    { include = "setup" },
]

[tool.poetry.dependencies]
python = "~3.9"
awscli = "1.25.21"
ansible = "*"
ansible-core = "^2.15.10"
ansible-lint = "^4.0.0"
ansible-vault = "^1.2.0"
jinja2 = "^3.0.0"
cryptography = "^2.9.2"
yq = "^2.10.0"
boto3 = "1.24.21"
"ruamel.yaml" = "^0.16.12"
tft-cli = "*"
markupsafe = "*"
pytest-gluetool = {git = "https://gitlab.com/testing-farm/pytest-gluetool.git", rev = "main"}
# TODO: gluetool *should* be deduced as a dependecy automatically from pytest-gluetool, but that does not happen.
# Locking without implicitily stating gluetool here doesn't actually propagate the module to the lockfile.
gluetool = "^2.3"
yamllint = "^1.29.0"

[tool.poetry.scripts]
terraform-cloud = "setup.terraform_cloud:main"

[tool.poetry.dev-dependencies]
yamllint = "^1.28.0"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "container",
    "compose",
    "hardware",
    "pipeline",
    "public",
    "redhat",
    "rhivos"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
