[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = "Testing Farm Infrastructure."
authors = ["Miroslav Vadkerti <<mvadkert@redhat.com>>"]
license = "Apache-2.0"
packages = [
    { include = "setup" },
]

[tool.poetry.dependencies]
python = "~3.12"
awscli = "*"
ansible = "*"
ansible-core = "*"
ansible-lint = "*"
ansible-vault = "*"
jinja2 = "*"
cryptography = "*"
yq = "*"
boto3 = "*"
"ruamel.yaml" = "*"
tft-cli = "*"
markupsafe = "*"
pytest-gluetool = {git = "https://gitlab.com/testing-farm/pytest-gluetool.git", rev = "upgrade-python-3.12"}
# TODO: gluetool *should* be deduced as a dependecy automatically from pytest-gluetool, but that does not happen.
# Locking without implicitily stating gluetool here doesn't actually propagate the module to the lockfile.
gluetool = "*"
yamllint = "*"
gitpython = "*"
fmf = "*"
typer = "*"

[tool.poetry.scripts]
terraform-cloud = "setup.terraform_cloud:main"
github = "setup.github:main"
gitlab = "setup.gitlab:main"
generate-artemis-pools = "setup.generate_pools:main"

[tool.poetry.dev-dependencies]
yamllint = "*"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "container",
    "compose",
    "hardware",
    "image-mode",
    "pipeline",
    "public",
    "redhat",
    "rhivos"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
